--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ ul {
 }
 
 .subtleText {
-  color: #D1D1D1;
+  color: purple;
   font-size: .75em;
 }
 
@@ -89,6 +89,10 @@ ul {
   outline: #3B0B0B dotted thick;
   transition: 0.75s;
   opacity: 1;
+}
+
+.tile-img {
+  width: 100%;
 }
 
 .minBackgroundSneak {
